# wikidata

./: README.md  pyproject.toml
airflowdags/: wikidata_load.py  wikidata_load_gcp.py
data/wiki/save/ko/date=20240101/date=2024-01-01/: .part-00000-c6175fcd-3729-4552-af5e-4e168ffeb737-c000.snappy.parquet.crc  .part-00001-c6175fcd-3729-4552-af5e-4e168ffeb737-c000.snappy.parquet.crc  part-00000-c6175fcd-3729-4552-af5e-4e168ffeb737-c000.snappy.parquet  part-00001-c6175fcd-3729-4552-af5e-4e168ffeb737-c000.snappy.parquet
note/: sampling.ipynb
pyspark/: run.sh  sampling.py  test.py  wiki_load.py
