[project]
name = "wikidata"
version = "0.2.4"
description = "wiki data"
authors = [
    {name = "ppabam", email = "tom@diginori.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
note = [
    "jupyterlab>=4.4.0",
]
dev = [
    "pyspark>=3.5.5",
    "pandas>=2.2.3",
]
